# planck

./: .gitignore  CMakeLists.txt  README.md  README3.md  Readme.md  Readme2.md  example.planck  example.txt  example3.txt
examples/: calculate.flanck  helloWorld.flanck  simple.flanck  sorting.planck
examples/flanck/: calculate.flanck  helloWorld.flanck  helloWorldInfinityLoop.flanck  multipleHelloWorld.flanck
examples/planck/: test.planck
src/: AST.cpp  AST.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  example2.txt  main.c  main.cpp
src/flanck/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Stack.h  Statement.h  Token.h  compile.sh  flanck.cpp  main.cpp  run.sh
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/planck/: AST.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
